--- a/brd-ios/breadwallet/src/Strings/sv.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/sv.lproj/Localizable.strings
@@ -77,7 +77,7 @@
 "Alert.ethBalance" = "Insufficient Ethereum Balance";
 
 /* Keystore error */
-"Alert.keystore.generic.android" = "Det har uppstått ett problem med KeyStore till Android OS. Kontakta hello@rockwallet.com";
+"Alert.keystore.generic.android" = "Det har uppstått ett problem med KeyStore till Android OS. Kontakta support@breadwallet.com";
 
 /* KeyStore error, keys are invalidated */
 "Alert.keystore.invalidated.android" = "Dina krypterade Rockwallet-uppgifter har nyligen ogiltigförklarats på grund av att Androids skärmlås inaktiverades.";
